# news_agent

./: .env.example  .gitignore  README.md  pyproject.toml  rss_feeds.json  specifications.md
news_agent/: __init__.py  __main__.py  article_writer.py  config.py  content_enricher.py  intermediate_writer.py  llm_client.py  news_filter.py  orchestrator.py  prompt_builder.py  report_writer.py  rss_fetcher.py  scraper.py  source_references.py
tests/: test_article_writer.py  test_config.py  test_content_enricher.py  test_intermediate_writer.py  test_llm_client.py  test_news_filter.py  test_orchestrator.py  test_prompt_builder.py  test_report_writer.py  test_rss_fetcher.py  test_scraper.py  test_source_references.py
