[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-agent"
version = "1.0.0"
description = "Agente inteligente de curaduría de pauta editorial para La Chispa Sur"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "freezegun>=1.4",
]

[tool.setuptools]
packages = ["news_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
